objects/ASI_eForm_IT_Procurement_Service_Item__c.object
<CustomObject>
    <fields>
        <fullName>ASI_eForm_CIO_Approve_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CIO Approve Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HKD</fullName>
                    <default>true</default>
                    <label>HKD</label>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>THB</fullName>
                </value>
                <value>
                    <fullName>TWD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Delivery_Location__c</fullName>
        <label>Delivery Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Duration__c</fullName>
        <label>Loan Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Estimated_Delivery_Date__c</fullName>
        <label>Estimated Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_FD_Approve_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FD Approve Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_HASRF_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_eForm_Requisition_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>New Hardware</fullName>
                </value>
                <value>
                    <fullName>New Notebook with docking</fullName>
                </value>
                <value>
                    <fullName>New Notebook without docking</fullName>
                </value>
                <value>
                    <fullName>New SW - NXPower Lite</fullName>
                </value>
                <value>
                    <fullName>New SW - MS Project</fullName>
                </value>
                <value>
                    <fullName>New SW - Non Listed</fullName>
                </value>
                <value>
                    <fullName>New SW - MS Visio</fullName>
                </value>
                <value>
                    <fullName>New SW - Adobe Photoshop</fullName>
                </value>
                <value>
                    <fullName>New SW - Cute FTP Home / Professional</fullName>
                </value>
                <value>
                    <fullName>New SW - BlackBerry Desktop / iTune</fullName>
                </value>
                <value>
                    <fullName>New SW - MS Office Professional Suite</fullName>
                </value>
                <value>
                    <fullName>New SW - Adobe Acrobat Standard</fullName>
                </value>
                <value>
                    <fullName>New SW - Adobe Acrobat Professional</fullName>
                </value>
                <value>
                    <fullName>IT Related Subscription Items</fullName>
                </value>
                <value>
                    <fullName>Non IT Related Subscription Items</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_ITSRF_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hardware Relocation</fullName>
                </value>
                <value>
                    <fullName>Hardware Loan</fullName>
                </value>
                <value>
                    <fullName>Software License Relocate</fullName>
                </value>
                <value>
                    <fullName>IT Services</fullName>
                </value>
                <value>
                    <fullName>Personal Software Installation</fullName>
                </value>
                <value>
                    <fullName>Mobile Device /w Data Plan</fullName>
                </value>
                <value>
                    <fullName>Mobile Device /wo Data Plan</fullName>
                </value>
                <value>
                    <fullName>Voice &amp; Data Plan Subscription</fullName>
                </value>
                <value>
                    <fullName>Mobile Device Relocation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_IT_Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IT Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Invalid Submission</fullName>
                </value>
                <value>
                    <fullName>Procurement In Progress</fullName>
                </value>
                <value>
                    <fullName>Work In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_IT_Feedback__c</fullName>
        <formula>IF( !ISPICKVAL(  ASI_eForm_IT_Procurement_Service_Request__r.ASI_eForm_Status__c , &quot;Final&quot;)&amp;&amp; ISBLANK(  ASI_eForm_IT_Procurement_Service_Request__r.ASI_eForm_sys_resubmit__c  ) , &quot;&quot;, Text( ASI_eForm_IT_Action__c ))</formula>
        <label>Feedback</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_IT_Handle_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Handle By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IT_Procurement_Service_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_IT_Procurement_Service_Request__c</fullName>
        <label>Procurement &amp; Service Request</label>
        <referenceTo>ASI_eForm_IT_Procurement_Service_Request__c</referenceTo>
        <relationshipLabel>Procurement &amp; Service Items</relationshipLabel>
        <relationshipName>IT_Procurement_Service_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_IT_Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Item__c</fullName>
        <label>Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Owner_Name__c</fullName>
        <label>Ownership Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requisition_Type__c</fullName>
        <label>Requisition Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Reserved_Field__c</fullName>
        <label>Reserved Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Specification__c</fullName>
        <label>Specification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Total_Amount_CCY__c</fullName>
        <formula>Text(ASI_eForm_Total_Amount__c) &amp; &quot; (&quot; +  Text(ASI_eForm_Currency__c)  &amp; &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Total_Amount__c</fullName>
        <formula>ASI_eForm_Unit_Price__c *  ASI_eForm_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Procurement &amp; Service Item</label>
    <nameField>
        <displayFormat>ITPSI-{00000000}</displayFormat>
        <label>Item No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Procurement &amp; Service Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_eForm_Hardware_Software_Request_Item</fullName>
        <active>true</active>
        <label>Hardware &amp; Software Request Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_IT_Service_Request_Item</fullName>
        <active>true</active>
        <label>IT Service Request Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_eForm_HAS_Protect_Complete_Item</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(ASI_eForm_IT_Action__c , &quot;Complete&quot;) &amp;&amp;  (RecordType.DeveloperName == &apos;ASI_eForm_Hardware_Software_Request_Item&apos;)&amp;&amp; !ISPICKVAL(  ASI_eForm_IT_Procurement_Service_Request__r.ASI_eForm_IT_Action__c, &quot;Complete&quot;) &amp;&amp; (ISCHANGED(ASI_eForm_HASRF_Category__c)|| ISCHANGED(ASI_eForm_Requisition_Type__c)|| ISCHANGED(ASI_eForm_Item__c)|| ISCHANGED(ASI_eForm_Specification__c) ||  ISCHANGED(ASI_eForm_Currency__c)|| ISCHANGED(ASI_eForm_Unit_Price__c)||
ISCHANGED(ASI_eForm_Quantity__c)||
ISCHANGED(ASI_eForm_Request_Date__c)||
ISCHANGED(ASI_eForm_Delivery_Location__c)||
ISCHANGED(ASI_eForm_Owner_Name__c))</errorConditionFormula>
        <errorMessage>You are not allowed to modify the item, because this item is already Complete</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_ITSR_Protect_Complete_Item</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(ASI_eForm_IT_Action__c , &quot;Complete&quot;) &amp;&amp;  (RecordType.DeveloperName == &apos;ASI_eForm_IT_Service_Request_Item&apos;)&amp;&amp; !ISPICKVAL( ASI_eForm_IT_Procurement_Service_Request__r.ASI_eForm_IT_Action__c, &quot;Complete&quot;) &amp;&amp; (ISCHANGED(ASI_eForm_ITSRF_Category__c)|| ISCHANGED(ASI_eForm_Item__c)|| ISCHANGED(ASI_eForm_Specification__c)|| ISCHANGED(ASI_eForm_Request_Date__c) ||  ISCHANGED(ASI_eForm_Duration__c)|| ISCHANGED(ASI_eForm_Owner_Name__c))</errorConditionFormula>
        <errorMessage>You are not allowed to modify the item, because this item is already Complete</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_Lock_IT_Action</fullName>
        <active>false</active>
        <errorConditionFormula>(ISPICKVAL(ASI_eForm_IT_Procurement_Service_Request__r.ASI_eForm_Status__c , &apos;Draft&apos;) || ISPICKVAL(  ASI_eForm_IT_Procurement_Service_Request__r.ASI_eForm_IT_Action__c  , &apos;Complete&apos;)) &amp;&amp;  ISCHANGED( ASI_eForm_IT_Action__c )</errorConditionFormula>
        <errorMessage>Cannot modify IT Action on a Draft or Complete Procurement &amp; Service Request Header.</errorMessage>
    </validationRules>
</CustomObject>